src/parser/snapshots/texlab__parser__latex__tests__parse@caption__caption_default.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/caption/caption_default.txt
---
ROOT@0..27
  PREAMBLE@0..27
    CAPTION@0..27
      CAPTION_NAME@0..8 "\\caption"
      BRACK_GROUP@8..13
        L_BRACK@8..9 "["
        TEXT@9..12
          WORD@9..12 "qux"
        R_BRACK@12..13 "]"
      CURLY_GROUP@13..27
        L_CURLY@13..14 "{"
        TEXT@14..18
          WORD@14..17 "Foo"
          WHITESPACE@17..18 " "
        GENERIC_COMMAND@18..23
          GENERIC_COMMAND_NAME@18..22 "\\Bar"
          WHITESPACE@22..23 " "
        TEXT@23..26
          WORD@23..26 "Baz"
        R_CURLY@26..27 "}"

